// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OutlinedInput ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary css-6nobrv-MuiInputBase-root-MuiOutlinedInput-root"
  >
    <input
      class="MuiInputBase-input MuiOutlinedInput-input css-1onc1nr-MuiInputBase-input-MuiOutlinedInput-input"
      type="text"
      value="Value"
    />
    <fieldset
      aria-hidden="true"
      class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="css-1nf2c5d-MuiNotchedOutlined-root"
      >
        <span
          aria-hidden="true"
          class="notranslate"
        >
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`OutlinedInput ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary css-yqgmbl-MuiInputBase-root-MuiOutlinedInput-root"
  >
    <input
      class="MuiInputBase-input MuiOutlinedInput-input css-66tsxs-MuiInputBase-input-MuiOutlinedInput-input"
      type="text"
      value="Value"
    />
    <fieldset
      aria-hidden="true"
      class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="css-1nf2c5d-MuiNotchedOutlined-root"
      >
        <span
          aria-hidden="true"
          class="notranslate"
        >
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`OutlinedInput ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary css-1doc67t-MuiInputBase-root-MuiOutlinedInput-root"
  >
    <input
      class="MuiInputBase-input MuiOutlinedInput-input css-1phryni-MuiInputBase-input-MuiOutlinedInput-input"
      type="text"
      value="Value"
    />
    <fieldset
      aria-hidden="true"
      class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="css-1nf2c5d-MuiNotchedOutlined-root"
      >
        <span
          aria-hidden="true"
          class="notranslate"
        >
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;

exports[`OutlinedInput ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary css-1d4fsxt-MuiInputBase-root-MuiOutlinedInput-root"
  >
    <input
      class="MuiInputBase-input MuiOutlinedInput-input css-p1pyuz-MuiInputBase-input-MuiOutlinedInput-input"
      type="text"
      value="Value"
    />
    <fieldset
      aria-hidden="true"
      class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
    >
      <legend
        class="css-1nf2c5d-MuiNotchedOutlined-root"
      >
        <span
          aria-hidden="true"
          class="notranslate"
        >
          ​
        </span>
      </legend>
    </fieldset>
  </div>
</div>
`;
